tests/NormalTests/paczka2/big_fuzzy/74333822.err
Error in line 3: 0qlLkmVeZB A285 26,3
Error in line 6: S562 A607 13,7
Error in line 8: 0qlLkmVeZB S268 70,1
Error in line 2: 9yZ1HnX4em A285 52,1
Error in line 20: S562 A285 54,3
Error in line 22: UrD1XbH0AU S562 86,03
Error in line 26: S562 A607 19,42
Error in line 30: 9yZ1HnX4em S268 94,5
Error in line 34: 9yZ1HnX4em A607 994,1
Error in line 36: 9yZ1HnX4em S268 19,5
Error in line 31: 2KmUKsXgBJP S562 12,5
Error in line 17: UrD1XbH0AU S562 17,9
Error in line 43: 9yZ1HnX4em S562 93,8
Error in line 27: S562 A607 93,1
Error in line 47: S562 S268 3,7
Error in line 55: 2KmUKsXgBJP S562 61,5
Error in line 57: 2KmUKsXgBJP A607 9,4
Error in line 60: 2KmUKsXgBJP S562 30,7
Error in line 52: Rc8 A285 75,7
Error in line 51: S562 A607 77,8
Error in line 74: 2KmUKsXgBJP S268 157,8
Error in line 80: 2KmUKsXgBJP A285 2,7
Error in line 82: 2KmUKsXgBJP S268 69,5
Error in line 89: 2KmUKsXgBJP A607 98,6
Error in line 84: 9yZ1HnX4em S562 61,0
Error in line 87: S562 A285 68,1
Error in line 93: S562 S268 30,0
Error in line 99: 9yZ1HnX4em A285 17,5
Error in line 97: Rc8 S562 67,9
Error in line 102: Rc8 S268 95,5
Error in line 104: 2KmUKsXgBJP S268 28,3
Error in line 105: 2KmUKsXgBJP S562 45,5
Error in line 107: 2KmUKsXgBJP A285 81,8
Error in line 108: 2KmUKsXgBJP A607 52,2
Error in line 111: OlpkCbAeO A607 27,5
Error in line 121: S562 A607 -1,4
Error in line 119: 9yZ1HnX4em S268 214,7
Error in line 126: 9yZ1HnX4em A285 11,2
Error in line 131: S562 A607 183,0
Error in line 128: Rc8 A607 182,6
Error in line 125: 0qlLkmVeZB S268 36,7
Error in line 134: Rc8 S268 99,5
Error in line 137: 9yZ1HnX4em A607 86,3
Error in line 138: 0qlLkmVeZB A285 52,1
Error in line 151: 9yZ1HnX4em S562 533,1
Error in line 153: 9yZ1HnX4em A285 71,5
Error in line 177: Rc8 A285 24,7
Error in line 179: 0qlLkmVeZB S268 86,2
Error in line 187: 2KmUKsXgBJP A607 38,4
Error in line 190: 2KmUKsXgBJP A285 72,9
Error in line 193: 0qlLkmVeZB S268 75,45
Error in line 194: 0qlLkmVeZB S268 169,9
Error in line 154: UrD1XbH0AU S268 198,2
Error in line 208: UrD1XbH0AU S268 89,4
Error in line 218: UrD1XbH0AU S562 30,9
Error in line 225: OlpkCbAeO A285 20,5
Error in line 226: OlpkCbAeO A607 2,9
Error in line 232: Rc8 A285 45,2
Error in line 242: Rc8 S268 83,2
Error in line 248: Rc8 A607 80,5
